tests/pp-fail/error_directive_missing_str.fl.0.exp
Error: error_directive_missing_str.fl(1,8): Expected error string, but got '123'
\error 123
       ^   
